# rubik

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  conanfile.py
conan/profiles/: unixlike-gcc-debug-tests  unixlike-gcc-release-benchmarks  unixlike-gcc-release-tests
include/rubik/: Color.hpp  Constants.hpp  Coord.hpp  Cube.hpp  Face.hpp  FacePosition.hpp  Frames.hpp  Plane.hpp  Position.hpp  Side.hpp  Slice.hpp  Utility.hpp  Vertex.hpp
src/: CMakeLists.txt  Color.cpp  Coord.cpp  Cube.cpp  Face.cpp  FacePosition.cpp  Position.cpp  Rubik.cpp  Side.cpp  Slice.cpp  Vertex.cpp
