AM_CFLAGS = -Wall
bin_PROGRAMS = rubik
rubik_SOURCES = Color.cpp Color.hpp Constants.hpp Coord.cpp Coord.hpp Cube.cpp Cube.hpp Face.cpp Face.hpp FacePosition.cpp FacePosition.hpp Frames.hpp Plane.hpp Position.cpp Position.hpp Rubik.cpp Side.cpp Side.hpp Slice.cpp Slice.hpp Utility.hpp Vertex.cpp Vertex.hpp
rubik_LDADD = -lglut -lGLU -lGL -lXi -lXmu -lX11 -lm -lboost_thread-gcc42-mt-1_36
